<resources>
    <string name="app_name">To-do-List</string>
    <string name="modal_title">Modal Title</string>
    <string name="new_title">New Title</string>
    <string name="new_description">New Description</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="title">Title</string>
    <string name="add">add</string>
    <string name="description">Description</string>
    <string name="add_record">add_record</string>
</resources>