<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/modal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modal_title"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/newTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modal_title"
        android:layout_marginTop="16dp"
        android:hint="@string/new_title"
        android:minHeight="48dp"
        android:padding="8dp"
        android:autofillHints=""
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/newDesc"
        android:inputType="textMultiLine"
        android:minLines="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newTitle"
        android:hint="@string/new_description"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newDesc"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="89dp"
        android:text="@string/edit" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newDesc"
        android:layout_alignParentStart="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="15dp"
        android:text="@string/delete" />

</RelativeLayout>